@@ -209,6 +209,7 @@ systems.
 #include <@top_srcdir@/man/manpage-common-troubleshooting-heading-end.man>
 #include <@top_srcdir@/man/manpage-common-troubleshooting-outofband.man>
 #include <@top_srcdir@/man/manpage-common-troubleshooting-inband.man>
+#include <@top_srcdir@/man/manpage-common-troubleshooting-inband-outofband.man>
 .SH "IPMI-SEL TROUBLESHOOTING"
 #include <@top_srcdir@/man/manpage-common-troubleshooting-sel.man>
 #include <@top_srcdir@/man/manpage-common-workaround-heading-text.man>
