@@ -191,6 +191,7 @@ tool.  Newer options may not be applicable to legacy output.
 #include <@top_srcdir@/man/manpage-common-troubleshooting-heading-end.man>
 #include <@top_srcdir@/man/manpage-common-troubleshooting-outofband.man>
 #include <@top_srcdir@/man/manpage-common-troubleshooting-inband.man>
+#include <@top_srcdir@/man/manpage-common-troubleshooting-inband-outofband.man>
 .LP
 "sensor config file parse error" - A parse error was found in the
 sensor interpretation configuration file.  Please see
