@@ -1,6 +1,7 @@
 FreeIPMI 1.2.8 - 05/30/13
 -------------------------
 o Fix portability build bug on ARM systems.
+o Add 'internal IPMI error' troubleshooting to manpages.
 
 FreeIPMI 1.2.7 - 05/16/13
 -------------------------
